Update map starting position [lng, lat]

--- a/simple-geo-map.html
+++ b/simple-geo-map.html
@@ -19,7 +19,7 @@ mapboxgl.accessToken = 'pk.eyJ1IjoiY2FudHpha2FzIiwiYSI6ImNqZ2R2MDhicTM4ZDAyd2xpa
 var map = new mapboxgl.Map({
     container: 'map', // container id
     style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
-    center: [-74.50, 40], // starting position [lng, lat]
+    center: [40.6976637,-74.1197632], // starting position [lng, lat]
     zoom: 9 // starting zoom
 });
 </script>
