--- a/simple-geo-map.html
+++ b/simple-geo-map.html
@@ -19,8 +19,8 @@ mapboxgl.accessToken = 'pk.eyJ1IjoiY2FudHpha2FzIiwiYSI6ImNqZ2R2MDhicTM4ZDAyd2xpa
 var map = new mapboxgl.Map({
     container: 'map', // container id
     style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
-    center: [40.6976637,-74.1197632], // starting position [lng, lat]
-    zoom: 9 // starting zoom
+    center: [-73.915,40.666], // starting position [lng, lat]
+    zoom:11 // starting zoom
 });
 </script>
 
