--- a/simple-geo-map.html
+++ b/simple-geo-map.html
@@ -19,7 +19,7 @@ mapboxgl.accessToken = 'pk.eyJ1IjoiY2FudHpha2FzIiwiYSI6ImNqZ2R2MDhicTM4ZDAyd2xpa
 var map = new mapboxgl.Map({
     container: 'map', // container id
     style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
-    center: [-73.915,40.666], // starting position [lng, lat]
+    center: [-73.915, 40.666], // starting position [lng, lat]
     zoom:11 // starting zoom
 });
 </script>
