--- a/simple-geo-map.html
+++ b/simple-geo-map.html
@@ -15,13 +15,25 @@
 
 <div id='map'></div>
 <script>
+
+/*    
 mapboxgl.accessToken = 'pk.eyJ1IjoiY2FudHpha2FzIiwiYSI6ImNqZ2R2MDhicTM4ZDAyd2xpaHIwZ3h1YWkifQ.ODiDVWTkkmiTKBJNVfFtog';
 var map = new mapboxgl.Map({
     container: 'map', // container id
-    style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
+    style: 'mapbox://styles/cantzakas/cjgeupq4u002e2tr9mtkjynf1', // stylesheet location
     center: [-73.915, 40.666], // starting position [lng, lat]
     zoom:10.5 // starting zoom
 });
+*/  
+    
+var mapboxgl = require('mapbox-gl/dist/mapbox-gl.js');
+ 
+mapboxgl.accessToken = 'pk.eyJ1IjoiY2FudHpha2FzIiwiYSI6ImNqZ2R2MDhicTM4ZDAyd2xpaHIwZ3h1YWkifQ.ODiDVWTkkmiTKBJNVfFtog';
+var map = new mapboxgl.Map({
+    container: 'cantzakas.cjgm7v3md3cbq2qtpilmuzgu8-957sr',
+    style: 'mapbox://styles/mapbox/streets-v10'
+});    
+    
 </script>
 
 </body>
