--- a/simple-geo-map.html
+++ b/simple-geo-map.html
@@ -24,10 +24,7 @@ var map = new mapboxgl.Map({
     zoom:10.5 // starting zoom
 });
 
-//cantzakas.cjgm7v3md3cbq2qtpilmuzgu8-957sr',
-    
-});    
-    
+//cantzakas.cjgm7v3md3cbq2qtpilmuzgu8-957sr'    
 </script>
 
 </body>
